--- a/reportdpk/dpk/static/styles/_filter.sass
+++ b/reportdpk/dpk/static/styles/_filter.sass
@@ -251,6 +251,103 @@ $height-selected-item: 20px
             text-align: center
             line-height: $height-selected-item
         
+// Компаний на странице, допустимая ДПК, кнопка получить
+.filter-countpage-dlk-buttonget
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    margin: 0 10px 0 10px
+
+    .page-size-requests
+        display: flex
+        flex-direction: column
+        width: 170px
+        
+        label
+            display: inline-block
+            height: 25px
+            width: 100%
+            overflow: hidden
+            font: "Helvetica Neue",Arial,Helvetica,sans-serif
+            opacity: .7
+
+        div
+            display: flex
+            flex-wrap: wrap
+            height: fit-content
+            padding: 0px 20px 0 2px
+            cursor: pointer
+            position: relative
+
+            input
+                width: 100%
+                height: 24px
+                padding: 1px
+                text-align:right
+                font-size: 14px
+
+    .filter-date-start
+        display: flex
+        flex-direction: column
+        width: 150px
+        
+        label
+            display: inline-block
+            height: 25px
+            width: 100%
+            overflow: hidden
+            font: "Helvetica Neue",Arial,Helvetica,sans-serif
+            opacity: .7
+
+        div
+            display: flex
+            flex-wrap: wrap
+            height: fit-content
+            padding: 0px 0px 0 2px
+            cursor: pointer
+            position: relative
+
+            input
+                width: 100%
+                height: 24px
+                padding: 1px
+                font-size: 14px
+    
+    .filter-button-get-data
+        display: flex
+        flex-direction: column
+        width: fit-content
+        margin-right: 20px
+        
+        label
+            display: inline-block
+            height: 22px
+            width: fit-content
+            overflow: hidden
+            font: "Helvetica Neue",Arial,Helvetica,sans-serif
+            opacity: .7
+
+        div
+            display: flex
+            flex-wrap: wrap
+            height: fit-content
+            padding: 0px 0px 0 2px
+            // cursor: pointer
+            position: relative
+
+            // кнопка получить фильтрованые данные
+            button
+                display: inline-block
+                padding: 1px 10px 1px 10px
+                height: $height-filter-button-get-data
+                background-color: $color-button
+                border-color: $color-button
+
+                &:hover
+                    background-color: $color-button-hover
+                    border-color: $color-button-hover
+
+
 
 
 .window-user-search
@@ -272,8 +369,8 @@ $height-selected-item: 20px
 
         .filter-window-data-close
             position: absolute
-            right: 16px
-            top: 2px
+            right: 4px
+            top: 0px
             z-index: 99999
 
     .window-searchcontact-container .btn-search-responsible, .window-searchcontact-container .btn-search-department, .window-searchcontact-container .btn-search-invite
