Добавлена фронтенд часть

--- a/reportdpk/dpk/static/styles/_filter.sass
+++ b/reportdpk/dpk/static/styles/_filter.sass
@@ -1,3 +1,11 @@
+// Ширина экрана, меньше которой поля фильтра выстраиваются в один столбец
+$display-width-filter-fields-rearranged: 768px
+
+// Высоты всех элементов фильтра
+$height-filter-container-element: 20px
+// Высота кнопки "Получить"
+$height-filter-button-get-data: 27px
+
 $background-color-window: #ffffff           // фон окна
 $background-color-window-cart: #f6faff      // фон карточки компании
 
@@ -7,6 +15,14 @@ $background-color-element-input: #e7f1ff
 $border-element-input: 1px solid #dddddd
 
 $height-selected-item: 20px
+
+// Высота кнопки "Получить"
+$height-button-go-over-page: 27px
+
+// Цвет кнопки 
+$color-button: #6c7ae0
+// Цвет кнопки при наведении
+$color-button-hover: #6470c7
 
 
 .my-class-accordion-button
