--- a/reportdpk/dpk/static/styles/index.css
+++ b/reportdpk/dpk/static/styles/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .my-class-accordion-button {
   padding: 5px 20px 5px 20px;
 }
@@ -1022,5 +1023,371 @@
   background-color: #6c7ae0;
   border-color: #6c7ae0;
   color: #ffffff;
+}
+
+.my-table table tbody tr .cell-background-red {
+  background-color: #e76767 !important;
+}
+
+@-webkit-keyframes wipe-enter {
+  0% {
+    -webkit-transform: scale(0, 0.025);
+            transform: scale(0, 0.025);
+  }
+  50% {
+    -webkit-transform: scale(1, 0.025);
+            transform: scale(1, 0.025);
+  }
+}
+
+@keyframes wipe-enter {
+  0% {
+    -webkit-transform: scale(0, 0.025);
+            transform: scale(0, 0.025);
+  }
+  50% {
+    -webkit-transform: scale(1, 0.025);
+            transform: scale(1, 0.025);
+  }
+}
+
+.container-date-communication {
+  padding: 0;
+}
+
+.my-table {
+  display: none;
+}
+
+table {
+  -webkit-transition: opacity 1.5s ease, -webkit-transform 1.5s ease;
+  transition: opacity 1.5s ease, -webkit-transform 1.5s ease;
+  transition: opacity 1.5s ease, transform 1.5s ease;
+  transition: opacity 1.5s ease, transform 1.5s ease, -webkit-transform 1.5s ease;
+  overflow-x: auto;
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -ms-grid;
+  display: grid;
+}
+
+table .header-th-data {
+  height: 65px;
+  font: normal 16px/20px Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+table .header-th-direction {
+  height: 25px;
+  font: normal 16px/20px Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+table .header-th-direction-data {
+  height: 40px;
+  font: normal 13px/17px Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+table .resize-handle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: black;
+  opacity: 0;
+  width: 5px;
+  cursor: col-resize;
+}
+
+table .resize-handle:hover,
+table .header--being-resized .resize-handle {
+  opacity: 0.5;
+}
+
+table th:hover .resize-handle {
+  opacity: 0.3;
+}
+
+table .sort-company-top, table .sort-inn-top, table .sort-responsible-top, table .sort-opportunity-work-top, table .sort-opportunity-sucсess-top, table .sort-dpk-top {
+  position: absolute;
+  margin-bottom: 5px;
+  top: 15%;
+  right: 5px;
+  cursor: pointer;
+  z-index: 105;
+}
+
+table .sort-company-top i, table .sort-inn-top i, table .sort-responsible-top i, table .sort-opportunity-work-top i, table .sort-opportunity-sucсess-top i, table .sort-dpk-top i {
+  font-size: 20px;
+}
+
+table .sort-company-bottom, table .sort-inn-bottom, table .sort-responsible-bottom, table .sort-opportunity-work-bottom, table .sort-opportunity-sucсess-bottom, table .sort-dpk-bottom {
+  position: absolute;
+  margin-top: 5px;
+  right: 5px;
+  bottom: 15%;
+  cursor: pointer;
+  z-index: 105;
+}
+
+table .sort-company-bottom i, table .sort-inn-bottom i, table .sort-responsible-bottom i, table .sort-opportunity-work-bottom i, table .sort-opportunity-sucсess-bottom i, table .sort-dpk-bottom i {
+  font-size: 20px;
+}
+
+table thead {
+  display: contents;
+}
+
+table thead tr {
+  display: contents;
+}
+
+table thead tr th {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background-color: #6c7ae0 !important;
+  text-align: center;
+  vertical-align: middle !important;
+  color: #ffffff;
+  z-index: 100;
+  border: 1px solid #dee2e6 !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+table thead tr th.header-active-deal {
+  background: #e5e8ff !important;
+}
+
+table thead tr th.col-company {
+  z-index: 110;
+}
+
+table thead tr .header-th-direction div {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+table thead tr:nth-child(1) th:nth-child(1) {
+  z-index: 110;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  padding-right: 25px;
+}
+
+table thead tr:nth-child(1) th:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  padding-right: 25px;
+}
+
+table thead tr:nth-child(1) th:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  padding-right: 25px;
+}
+
+table thead tr:nth-child(1) th:nth-child(4) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  padding-right: 25px;
+}
+
+table thead tr:nth-child(1) th:nth-child(5) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  padding-right: 25px;
+}
+
+table tbody {
+  display: contents;
+}
+
+table tbody tr {
+  display: contents;
+}
+
+table tbody tr:nth-child(even) td {
+  background: #f8f6ff !important;
+}
+
+table tbody tr td {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #ffffff !important;
+  padding: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  z-index: 10;
+  height: 40px;
+  font: normal 14px/17px Arial, "Helvetica Neue", Helvetica, sans-serif;
+  color: #616060;
+  border: 1px solid #dee2e6;
+}
+
+table tbody tr td:nth-child(1) {
+  position: relative;
+  z-index: 90;
+}
+
+table tbody tr td p {
+  margin: 0;
+  height: inherit;
+}
+
+table tbody tr td a {
+  display: inline-block;
+  height: inherit;
+  line-height: 20px;
+}
+
+table tbody tr td.attention-exceeding-max-date-communication {
+  background-color: #ff9f9fc2 !important;
+}
+
+table tbody tr td.directory-column-border-left {
+  border-left-width: 2px;
+  border-left-color: #9b9595;
+}
+
+table tbody tr td.directory-column-border-right {
+  border-right-width: 2px;
+  border-right-color: #9b9595;
+}
+
+table tbody tr td.dpk-more-six-months {
+  background-color: #32ff0945 !important;
+}
+
+table tbody tr td.count-active-deal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 30px;
+  background: #fff1f1;
+  font: normal 14px/17px Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+table tbody tr td.count-active-deal.directory-column-border-left-border-left {
+  border-left-width: 2px;
+  border-left-color: #9b9595;
+}
+
+table tbody tr .col-company, table tbody tr .col-responsible {
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.td-id-list {
+  width: 100%;
+  height: 40px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.td-id-list::-webkit-scrollbar {
+  margin-left: 10px;
+  width: 7px;
+}
+
+.td-id-list::-webkit-scrollbar-thumb {
+  background-color: #cecece;
+}
+
+.td-id-list ul {
+  margin: 0;
+}
+
+.spinner-load-statistic-data {
+  display: none;
+  margin-top: 50px;
+}
+
+.prompt-full-company-data {
+  display: none;
+  position: absolute;
+  padding: 3px;
+  z-index: 1000;
+  background: #fffffa;
+  border: 1px solid #f3f3f3;
+  border-radius: .25rem;
+  border-color: #e7e7e7;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.prompt-full-company-data .prompt-data-company-name {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.prompt-full-company-data .prompt-data-company-inn {
+  height: 18px;
+}
+
+.prompt-full-company-data .prompt-data-company-inn b, .prompt-full-company-data .prompt-data-company-inn span {
+  color: #828082;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.prompt-full-company-data .prompt-data-company-id-bx {
+  height: 18px;
+}
+
+.prompt-full-company-data .prompt-data-company-id-bx b, .prompt-full-company-data .prompt-data-company-id-bx span {
+  color: #828082;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.prompt-full-responsible-data {
+  display: none;
+  position: absolute;
+  padding: 3px;
+  z-index: 1000;
+  background: #fffffa;
+  border: 1px solid #f3f3f3;
+  border-radius: .25rem;
+  border-color: #e7e7e7;
+}
+
+.prompt-full-responsible-data .prompt-data-responsible-photo img {
+  height: 100px;
+}
+
+.prompt-full-responsible-data .prompt-data-responsible-content {
+  margin-left: 10px;
 }
 /*# sourceMappingURL=index.css.map */
