Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -287,7 +287,7 @@
 									<div class="filter-button-get-data">
 										<label for=""></label>
 										<div>
-											<button type="button" class="btn btn-primary">Получить</button>
+											<button type="button" class="btn btn-primary" id="buttonGetStatistic">Получить</button>
 										</div>
 									</div>
 								</div>
@@ -301,7 +301,7 @@
 				<div class="number-page-requests">
 					<p>Страница</p>
 					<div><input type="number" class="form-control"  min="1" max="" value="1" class="number-page-requests-input"></div>
-					<button type="button" class="btn btn-primary">Перейти</button>
+					<button type="button" class="btn btn-primary" id="buttonGoToPage">Перейти</button>
 				</div>
 				<!-- ПАГИНАЦИЯ -->
 				<div class="table-nav my-paginator-table">
