--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -300,7 +300,7 @@
 			<div class="settings-param-requests">
 				<div class="number-page-requests">
 					<p>Страница</p>
-					<div><input type="number" class="form-control"  min="1" max="" value="1" class="number-page-requests-input"></div>
+					<div><input type="number" class="form-control"  min="1" max="" value="1" class="number-page-requests-input" id="selectedPageNumber"></div>
 					<button type="button" class="btn btn-primary" id="buttonGoToPage">Перейти</button>
 				</div>
 				<!-- ПАГИНАЦИЯ -->
