Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -315,7 +315,7 @@
 
 			<!-- ТАБЛИЦА -->
 			<div class="table-responsive-md my-table">
-				<table class="table table-sm">
+				<table class="table table-sm" id="tableStatisticData">
 					<thead class="align-middle table-light">
 					<tr class="text-center">
 						<th scope="col" rowspan="2" class="col-company header-th-data" data-type="text-long" data-position="1">
