--- a/reportdpk/dpk/static/styles/_table.sass
+++ b/reportdpk/dpk/static/styles/_table.sass
@@ -31,8 +31,8 @@ $background-cell-exceeding-max-date-communication: #ff9f9fc2
 .container-date-communication
     padding: 0
 
-.my-table
-    display: none
+// .my-table
+//     display: none
 
 table
     transition: opacity 1.5s ease, transform 1.5s ease
