--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -315,7 +315,7 @@
 
 			<!-- ТАБЛИЦА -->
 			<div class="table-responsive-md my-table">
-				<table class="table table-sm" id="tableStatisticData">
+				<table class="d-none table table-sm" id="tableStatisticData">
 					<thead class="align-middle table-light">
 					<tr class="text-center">
 						<th scope="col" rowspan="2" class="col-company header-th-data" data-type="text-long" data-position="1">
@@ -421,7 +421,7 @@
 				</div>
 
 			<!-- Спиннер загрузки данных -->
-			<div class="text-center spinner-load-statistic-data">
+			<div class="text-center spinner-load-statistic-data" id="loaderTableStatistic">
 				<div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
 					<span class="visually-hidden">Загрузка...</span>
 				</div>
