Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -12,6 +12,11 @@
         <link rel="stylesheet" href="{% static 'styles/index.css' %}">
 
         <title>ДПК</title>
+		<script>
+			function about(e) {
+				e.PreventDefault;
+			}
+		</script>
     </head>
     <body>
 		<div class="container-fluid container-main">		
