Добавлена фронтенд часть

--- a/reportdpk/dpk/static/styles/_table.sass
+++ b/reportdpk/dpk/static/styles/_table.sass
@@ -222,6 +222,12 @@ table
                     // background: #ffffff
                     // background-color: #6c7ae0 !important
                     z-index: 90
+                .col-href
+                    color: #0d6efd
+                    text-decoration: underline
+                    &:hover
+                        color: #0a58ca
+                    
                 p
                     margin: 0
                     height: inherit
