--- a/reportdpk/dpk/static/styles/index.css
+++ b/reportdpk/dpk/static/styles/index.css
@@ -1250,6 +1250,15 @@ table tbody tr td:nth-child(1) {
   z-index: 90;
 }
 
+table tbody tr td .col-href {
+  color: #0d6efd;
+  text-decoration: underline;
+}
+
+table tbody tr td .col-href:hover {
+  color: #0a58ca;
+}
+
 table tbody tr td p {
   margin: 0;
   height: inherit;
