--- a/reportdpk/dpk/static/styles/_table.sass
+++ b/reportdpk/dpk/static/styles/_table.sass
@@ -225,6 +225,7 @@ table
                 .col-href
                     color: #0d6efd
                     text-decoration: underline
+                    line-height: $height-row-tbody / 2
                     &:hover
                         color: #0a58ca
                     
