--- a/reportdpk/dpk/static/styles/index.css
+++ b/reportdpk/dpk/static/styles/index.css
@@ -1253,6 +1253,7 @@ table tbody tr td:nth-child(1) {
 table tbody tr td .col-href {
   color: #0d6efd;
   text-decoration: underline;
+  line-height: 20px;
 }
 
 table tbody tr td .col-href:hover {
