--- a/reportdpk/dpk/static/styles/_table.sass
+++ b/reportdpk/dpk/static/styles/_table.sass
@@ -226,6 +226,7 @@ table
                     color: #0d6efd
                     text-decoration: underline
                     line-height: $height-row-tbody / 2
+                    cursor: pointer
                     &:hover
                         color: #0a58ca
                     
