--- a/reportdpk/dpk/static/styles/index.css
+++ b/reportdpk/dpk/static/styles/index.css
@@ -1254,6 +1254,7 @@ table tbody tr td .col-href {
   color: #0d6efd;
   text-decoration: underline;
   line-height: 20px;
+  cursor: pointer;
 }
 
 table tbody tr td .col-href:hover {
