Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -286,7 +286,7 @@
 								<div class="filter-countpage-dlk-buttonget">
 									<div class="page-size-requests">
 										<label>Компаний на странице</label>
-										<div><input type="number" class="form-control"  min="5" max="250" value="50" class="page-size-requests-input"></div>
+										<div><input type="number" class="form-control"  min="5" max="250" value="50" class="page-size-requests-input" id="selectedPageSize"></div>
 									</div>
 									<div class="filter-date-start"> </div>
 									<div class="filter-button-get-data">
