Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -288,7 +288,10 @@
 										<label>Компаний на странице</label>
 										<div><input type="number" class="form-control"  min="5" max="250" value="50" class="page-size-requests-input" id="selectedPageSize"></div>
 									</div>
-									<div class="filter-date-start"> </div>
+									<div class="filter-date-start">
+										<label>Длительность звонка для учета в ДПК</label>
+										<div><input type="number" class="form-control"  min="0" max="1000" value="10" class="" id="minDurationForCalcDpk"></div>
+									</div>
 									<div class="filter-button-get-data">
 										<label for=""></label>
 										<div>
