--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -255,6 +255,25 @@
 										</div>
 									</div>
 								</div>
+
+								<!-- Фильтр "Период создания компании" -->
+								 <div class="filter-range" id="filterDateCreatedCompany">
+									<label for="" class="filter-label">Период создания компании</label>
+									<div class="filter-field">
+									  	<div class="filter-field-min">
+											<span>
+												<input type="date" name="trip-start" value="" min="" max="" class="form-control filter-field-input filter-field-min-input">
+									  		</span>
+										</div>
+									  	<div class="filter-field-separator"> – </div>
+									  	<div class="filter-field-max">
+											<span>
+												<input type="date" name="trip-end" value="" min="" max="" class="form-control filter-field-input filter-field-max-input">
+									  		</span>
+										</div>
+									</div>
+								 </div>
+
 								<!-- Фильтр "Годовой оборот компании" -->
 								<div class="filter-range" id="filterRevenue">
 									<label for="" class="filter-label">Годовой оборот компании</label>
